# lolibot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  config.toml.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  dependency-review.yml
lolibot/: __init__.py  bot.py  config.py  db.py  google_api.py  llm.py  task_manager.py
lolibot/cli/: __init__.py  commands.py
lolibot/llm/: __init__.py  anthropic.py  base.py  default.py  gemini.py  openai.py  processor.py  prompts.py
lolibot/services/: __init__.py  middleware.py  processor.py  status.py  task_manager.py
lolibot/services/middleware/: __init__.py  date_validation.py  just_me.py  not_task.py  pipeline.py  protocol.py  test_message_check.py  title_validation.py
lolibot/telegram/: __init__.py  bot.py  error_handler.py  get_context_command.py  help_command.py  message_handler.py  set_context_command.py  start_command.py  status_command.py  utils.py
scripts/: setup_google_auth.py
tests/: conftest.py  test_app.py  test_cli_commands.py  test_config.py  test_db.py  test_google_api.py  test_llm_default_provider.py  test_llm_fallback.py  test_llm_prompts.py  test_llm_providers.py  test_middleware.py  test_multiple_tasks.py  test_status.py  test_task_manager.py  test_telegram_bot.py  test_telegram_context_ui.py
