[project]
name = "lolibot"
version = "1.0.4"
description = ""
authors = [
    {name = "Juan Arias",email = "juan.arias.freire@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
google-api-python-client = "2.108.0"
google-auth-httplib2 = "0.1.1"
google-auth-oauthlib = "1.1.0"
requests="2.31.0"
python-dotenv="1.0.0"
pytz= "2023.3.post1"
python-telegram-bot = "20.6"
click = "^8.1.7"
tomli = "^2.2.1"
tomli-w = "^1.2.0"

[tool.poetry]

[tool.poetry.scripts]
loli = "app:main"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
pytest = "^8.3.5"
coverage = "^7.8.0"
bandit = "^1.8.3"
pytest-asyncio = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.flake8]
max-line-length = 140
statistics = true
benchmark = true

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.poetry_bumpversion.file."lolibot/__init__.py"]