[project]
name = "lolibot"
version = "1.1.0"
description = ""
authors = [
    {name = "Juan Arias",email = "juan.arias.freire@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
google-api-python-client = "2.187.0"
google-auth-httplib2 = "0.2.1"
google-auth-oauthlib = "1.2.3"
requests="2.32.5"
python-dotenv="1.2.1"
pytz= "2025.2"
python-telegram-bot = "22.5"
click = "^8.3.0"
tomli = "^2.3.0"
tomli-w = "^1.2.0"

[tool.poetry]

[tool.poetry.scripts]
loli = "app:main"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"
pytest = "^9.0.1"
coverage = "^7.11.3"
bandit = "^1.8.6"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140

[tool.flake8]
max-line-length = 140
statistics = true
benchmark = true

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.poetry_bumpversion.file."lolibot/__init__.py"]
[tool.poetry_bumpversion.file."Dockerfile"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]